--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 					</li>
 
 					<li class="sidebar-item active">
-						<a class="sidebar-link" href="/">
+						<a class="sidebar-link" href="/home">
               <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
             </a>
 					</li>
