--- a/views/postOrders.ejs
+++ b/views/postOrders.ejs
@@ -45,7 +45,7 @@
 										<div class="container">
 											<div class="row justify-content-between mb-3" align = "center" >
 												<div class="col pt-1 " >
-												  <input type="number" name = "userID" maxlength="10" style = 'width:200px' >
+												  <input type="number" name = "userID" maxlength="10" style = 'width:200px' placeholder="Enter Student Id >
 												</div>
 
 
