--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -44,7 +44,7 @@
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Password</label>
-											<input class="form-control form-control-lg" type="text" name="password" placeholder="Enter your password" autocomplete="off"/>
+											<input class="form-control form-control-lg" type="password" name="password" placeholder="Enter your password" autocomplete="off"/>
 
 										</div>
 
